kubernetes/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2

---
apiVersion: 1
kind: Service
metadata:
  name: flask-app-service
  label:
    app: flask-app
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 80
      nodePort: 31080
